crates/core/tests/snapshots/container_type_test__to_tokens__unit_enum.snap
---
source: crates/core/tests/container_type_test.rs
expression: pretty(container.to_token_stream())
---
#[derive(Clone, Debug, PartialEq, serde::Deserialize, serde::Serialize)]
#[serde(rename_all = "kebab-case")]
pub enum PartialExample {
    A,
    B,
    C,
}
#[automatically_derived]
impl Default for PartialExample {
    fn default() -> Self {
        Self::B
    }
}
#[automatically_derived]
impl schematic::PartialConfig for PartialExample {
    type Context = ();
    fn default_values(
        context: &Self::Context,
    ) -> std::result::Result<Option<Self>, schematic::ConfigError> {
        Ok(Some(Self::B))
    }
    fn merge(
        &mut self,
        context: &Self::Context,
        mut next: Self,
    ) -> std::result::Result<(), schematic::ConfigError> {
        *self = next;
        Ok(())
    }
}
#[automatically_derived]
impl schematic::Config for Example {
    type Partial = PartialExample;
    fn from_partial(partial: Self::Partial) -> Self {
        match partial {
            PartialExample::A => Self::A,
            PartialExample::B => Self::B,
            PartialExample::C => Self::C,
        }
    }
    fn settings() -> schematic::ConfigSettingMap {
        use schematic::ConfigSetting;
        std::collections::BTreeMap::from_iter([
            ("a".into(), ConfigSetting::new("a")),
            ("b".into(), ConfigSetting::new("b")),
            ("c".into(), ConfigSetting::new("c")),
        ])
    }
}
#[automatically_derived]
impl Default for Example {
    fn default() -> Self {
        <Self as schematic::Config>::from_partial(
            <Self as schematic::Config>::default_partial(),
        )
    }
}
#[automatically_derived]
impl schematic::Schematic for Example {
    fn schema_name() -> Option<String> {
        Some("Example".into())
    }
    fn build_schema(mut schema: schematic::SchemaBuilder) -> schematic::Schema {
        use schematic::schema::*;
        schema
            .enumerable(
                EnumType::from_schemas(
                    [
                        Schema {
                            name: Some("a".into()),
                            ty: Schema::literal_value(LiteralValue::String("a".into()))
                                .ty,
                            ..Default::default()
                        },
                        Schema {
                            name: Some("b".into()),
                            ty: Schema::literal_value(LiteralValue::String("b".into()))
                                .ty,
                            ..Default::default()
                        },
                        Schema {
                            name: Some("c".into()),
                            ty: Schema::literal_value(LiteralValue::String("c".into()))
                                .ty,
                            ..Default::default()
                        },
                    ],
                    Some(1usize),
                ),
            )
    }
}
#[automatically_derived]
impl schematic::Schematic for PartialExample {
    fn schema_name() -> Option<String> {
        Some("PartialExample".into())
    }
    fn build_schema(schema: schematic::SchemaBuilder) -> schematic::Schema {
        let mut schema = Example::build_schema(schema);
        schematic::internal::partialize_schema(&mut schema, true);
        schema
    }
}
