crates/core/tests/snapshots/container_type_test__to_tokens__unnamed_enum.snap
---
source: crates/core/tests/container_type_test.rs
expression: pretty(container.to_token_stream())
---
#[derive(Clone, Debug, PartialEq, serde::Serialize)]
#[serde(untagged)]
pub enum PartialExample {
    Bool(bool),
    Number(usize),
    Nested(<NestedConfig as schematic::Config>::Partial),
    List(Vec<<NestedConfig as schematic::Config>::Partial>),
}
#[automatically_derived]
impl Default for PartialExample {
    fn default() -> Self {
        Self::Bool(Default::default())
    }
}
#[automatically_derived]
impl<'de> serde::Deserialize<'de> for PartialExample {
    fn deserialize<D>(deserializer: D) -> std::result::Result<Self, D::Error>
    where
        D: serde::Deserializer<'de>,
    {
        use serde::de::Error as _;
        let content = schematic::internal::buffer_untagged_content(deserializer)?;
        let mut errors: Vec<(&str, String)> = Vec::new();
        match <bool as serde::Deserialize>::deserialize(
            schematic::serde_content::Deserializer::new(content.clone())
                .coerce_numbers()
                .human_readable(),
        ) {
            Ok(value) => return Ok(PartialExample::Bool(value)),
            Err(error) => errors.push(("Bool", error.to_string())),
        }
        match <usize as serde::Deserialize>::deserialize(
            schematic::serde_content::Deserializer::new(content.clone())
                .coerce_numbers()
                .human_readable(),
        ) {
            Ok(value) => return Ok(PartialExample::Number(value)),
            Err(error) => errors.push(("Number", error.to_string())),
        }
        match <<NestedConfig as schematic::Config>::Partial as serde::Deserialize>::deserialize(
            schematic::serde_content::Deserializer::new(content.clone())
                .coerce_numbers()
                .human_readable(),
        ) {
            Ok(value) => return Ok(PartialExample::Nested(value)),
            Err(error) => errors.push(("Nested", error.to_string())),
        }
        match <Vec<
            <NestedConfig as schematic::Config>::Partial,
        > as serde::Deserialize>::deserialize(
            schematic::serde_content::Deserializer::new(content.clone())
                .coerce_numbers()
                .human_readable(),
        ) {
            Ok(value) => return Ok(PartialExample::List(value)),
            Err(error) => errors.push(("List", error.to_string())),
        }
        let mut message = format!(
            "failed to parse as any variant of {}:", stringify!(PartialExample)
        );
        for (variant, error) in &errors {
            message.push_str(&format!("\n- {variant}: {error}"));
        }
        Err(D::Error::custom(message))
    }
}
#[automatically_derived]
impl schematic::PartialConfig for PartialExample {
    type Context = ();
    fn default_values(
        context: &Self::Context,
    ) -> std::result::Result<Option<Self>, schematic::ConfigError> {
        Ok(Some(Self::Bool(Default::default())))
    }
    fn finalize(
        self,
        context: &Self::Context,
    ) -> std::result::Result<Self, schematic::ConfigError> {
        Ok(
            match self {
                Self::Nested(pa) => Self::Nested(pa.finalize(context)?),
                Self::List(pa) => {
                    Self::List(
                        transform_list(
                            {
                                let mut list = Vec::default();
                                for pa in pa {
                                    list.push(pa.finalize(context)?);
                                }
                                list
                            },
                            context,
                        )?,
                    )
                }
                _ => self,
            },
        )
    }
    fn merge(
        &mut self,
        context: &Self::Context,
        mut next: Self,
    ) -> std::result::Result<(), schematic::ConfigError> {
        match self {
            Self::Nested(pa) => {
                if let Self::Nested(na) = next {
                    pa.merge(context, na)?;
                } else {
                    *self = next;
                }
            }
            Self::List(pa) => {
                if let Self::List(na) = next {
                    *self = Self::List(
                        merge::append_vec(pa.to_owned(), na, context)?
                            .unwrap_or_default(),
                    );
                } else {
                    *self = next;
                }
            }
            _ => {
                *self = next;
            }
        };
        Ok(())
    }
    fn validate_with_path(
        &self,
        context: &Self::Context,
        finalizing: bool,
        path: schematic::Path,
    ) -> std::result::Result<(), Vec<schematic::ValidateError>> {
        use schematic::internal::*;
        let mut validate = ValidateManager::new(context, finalizing, path);
        match self {
            Self::Bool(pa) => {}
            Self::Number(pa) => {}
            Self::Nested(pa) => {
                validate.nested_variant("Nested", 0usize, pa);
            }
            Self::List(pa) => {
                validate.nested_variant_list("List", 0usize, pa.iter().map(Some));
            }
            _ => {}
        };
        if !validate.errors.is_empty() {
            return Err(validate.errors);
        }
        Ok(())
    }
}
#[automatically_derived]
impl schematic::Config for Example {
    type Partial = PartialExample;
    fn from_partial(partial: Self::Partial) -> Self {
        match partial {
            PartialExample::Bool(pa) => Self::Bool(pa),
            PartialExample::Number(pa) => Self::Number(pa),
            PartialExample::Nested(pa) => Self::Nested(NestedConfig::from_partial(pa)),
            PartialExample::List(pa) => {
                Self::List({
                    let mut list = Vec::default();
                    for pa in pa {
                        list.push(NestedConfig::from_partial(pa));
                    }
                    list
                })
            }
        }
    }
    fn settings() -> schematic::ConfigSettingMap {
        use schematic::ConfigSetting;
        std::collections::BTreeMap::from_iter([
            ("Bool".into(), ConfigSetting::new("bool")),
            ("Number".into(), ConfigSetting::new("usize")),
            ("Nested".into(), ConfigSetting::new("NestedConfig")),
            ("List".into(), ConfigSetting::new("Vec<NestedConfig>")),
        ])
    }
}
#[automatically_derived]
impl Default for Example {
    fn default() -> Self {
        <Self as schematic::Config>::from_partial(
            <Self as schematic::Config>::default_partial(),
        )
    }
}
#[automatically_derived]
impl schematic::Schematic for Example {
    fn schema_name() -> Option<String> {
        Some("Example".into())
    }
    fn build_schema(mut schema: schematic::SchemaBuilder) -> schematic::Schema {
        use schematic::schema::*;
        schema
            .union(
                UnionType::from_named_schemas(
                    [
                        ("Bool".into(), schema.infer::<bool>()),
                        ("Number".into(), schema.infer::<usize>()),
                        ("Nested".into(), schema.infer_as_nested::<NestedConfig>()),
                        ("List".into(), schema.infer_as_nested::<Vec<NestedConfig>>()),
                    ],
                    Some(0usize),
                ),
            )
    }
}
#[automatically_derived]
impl schematic::Schematic for PartialExample {
    fn schema_name() -> Option<String> {
        Some("PartialExample".into())
    }
    fn build_schema(schema: schematic::SchemaBuilder) -> schematic::Schema {
        let mut schema = <Example as schematic::Schematic>::build_schema(schema);
        schematic::internal::partialize_schema(&mut schema, true);
        schema
    }
}
